<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="100dp"
    android:orientation="horizontal"
    >


    <ImageView
        android:id="@+id/product_image"
        android:layout_width="88dp"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean"
        tools:text="@string/example_name_of_item" />


    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/product_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/example_price" />

    <TextView
        android:id="@+id/product_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toBottomOf="@+id/product_name"
        tools:text="@string/example_model" />

    <TextView
        android:id="@+id/stockAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/in_stock"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD"
        app:layout_constraintStart_toEndOf="@+id/product_price"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_current_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/product_model"
        app:layout_constraintTop_toBottomOf="@+id/stockAvailable"
        tools:text="@string/example_quantity" />

    <TextView
        android:id="@+id/stock_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/pcs_unit"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toEndOf="@+id/product_current_quantity"
        app:layout_constraintTop_toBottomOf="@+id/stockAvailable" />


</androidx.constraintlayout.widget.ConstraintLayout>